Add JDK9 module info